--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
+# Environment and secrets
 .env
-venv/
+.env.local
+.env.*.local
+
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+.venv/
+env/
+*.egg-info/
+.eggs/
+dist/
+build/
+
+# Runtime / persistence (bot state, don’t commit)
+data/
+
+# OS and IDE
 .DS_Store
+Thumbs.db
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs and temp
+*.log
+.cache/
